infra/k8s/overlays/local/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: spidey-senses
spec:
  template:
    spec:
      containers:
      - name: api
        command: ["dotnet"]
        args: ["SpiderControl.WebApiV2.dll", "--urls", "http://0.0.0.0:8080"]
        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
